# PolyVectorization

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README.txt
cmake/: FindGUROBI.cmake
sample_inputs/: Copyrights.txt
src/: AlmostReebGraph.cpp  AlmostReebGraph.h  CMakeLists.txt  ChainDecomposition.cpp  ChainDecomposition.h  CircularSegment.cpp  CircularSegment.h  ContractDeg2.cpp  ContractDeg2.h  ContractLoops.cpp  ContractLoops.h  ContractLoops2.cpp  ContractLoops2.h  Equations.h  FillHole.h  FindRoots.cpp  FindRoots.h  GurobiLSLinIneqSolver.cpp  GurobiLSLinIneqSolver.h  HermiteSpline.h  ILSLinIneqSolver.h  IsLoopContractible.cpp  IsLoopContractible.h  LBFGS.h  MyScrollArea.cpp  MyScrollArea.h  Optimizer.cpp  Optimizer.h  Params.h  RemoveShortBranches.cpp  RemoveShortBranches.h  ScanConvert.cpp  ScanConvert.h  Simplify.cpp  Simplify.h  Smooth.cpp  Smooth.h  SplitEmUp.cpp  SplitEmUp.h  TopoGraphEmbedding.cpp  (+36 more)
